--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="website/static/controllers.js"></script>
   </head>
   <body>
-    <header>
+    <header "navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
     <h1 class="text-center">Lizard</h1>
     <h2 class="text-center"> Code Compliexity Analyzer </h2>
     </header>
