--- a/index.html
+++ b/index.html
@@ -5,18 +5,42 @@
     <script src="website/static/bower/angular/angular.js"></script>
     <script src="website/static/controllers.js"></script>
   </head>
-  <body>
-    <header "navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
-    <h1 class="text-center">Lizard</h1>
-    <h2 class="text-center"> Code Compliexity Analyzer </h2>
-    </header>
+  <body style="padding-top: 70px;">
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-      <blockquote>complex doesn't have to be complicated.</blockquote>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Lizard <em>code complexity analyzer</em></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#try">Try Online</a></li>
+            <li><a href="https://github.com/terryyin/lizard">github</a></li>
+            <li><a href="https://pypi.python.org/pypi/lizard">Download</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
-    <div class="row center-block" ng-controller="SourceFormController as source" ng-submit="submit()">
+    <div class="container theme-showcase" role="main">
+    <div class="jumbotron">
+      <h1>Complex is better</h1>
+      <p>Than complicated. It's OK to build very complex software,
+      but you don't have to build it in a complicated way. Lizard is a Python module
+      that analyse the complexity of your source code right away without any extra setup.</p>
+      <p><a href="https://pypi.python.org/pypi/lizard" class="btn btn-primary btn-lg" role="button">Download &raquo;</a></p>
+    </div>
+    </div>
+    <div class="row container center-block" ng-controller="SourceFormController as source" ng-submit="submit()">
       <div class="col-md-6">
         <form method="post"  role="form" class="form-horizontal">
-          <h4>Try Lizard in Your Browser</h4>
+          <h4><a id="try">Try Lizard in Your Browser</a></h4>
           <div class="form-group">
             <div class="col-sm-6">
               <select ng-init="source.lang = source.lang || '.c'"
@@ -24,8 +48,8 @@
               </select>
             </div>
             <div class="col-sm-6">
-            <input type="submit" value="Analyse" class="form-control btn btn-primary pull-right">
-          </div>
+              <input type="submit" value="Analyse" class="form-control btn btn-primary pull-right">
+            </div>
           </div>
           <div><textarea name="content"  class="form-control" rows="20" ng-model="source.code" placeholder="Paste your source code here..."></textarea></div>
         </form>
@@ -42,7 +66,6 @@
             <th> Complexity </th>
             <th> Token Count </th>
             <th> Parameter Count </th>
-            <th> Position </th>
           </tr>
           <tr ng-repeat="fun in result.function_list">
             <td>{{fun.name}}</td>
@@ -50,9 +73,11 @@
             <td align=right>{{fun.cyclomatic_complexity}}</td>
             <td align=right>{{fun.token_count}}</td>
             <td align=right>{{fun.parameter_count}}</td>
-            <td align=right>{{fun.start_line}} - {{fun.end_line}}</td>
           </tr>
         </table>
       </div>
+      <script src="website/static/bower/jquery/jquery.min.js"></script>
+      <script src="website/static/bower/bootstrap/dist/js/bootstrap.min.js"></script>
+
     </body>
   </html>
