--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Lizard <em>code complexity analyzer</em></a>
+          <a href="/" class="nav-brand navbar-left">
+            <img src="website/static/img/logo.png" style="width:40px;" />
+           </a>
+          <a class="navbar-brand" href="#">
+            Lizard <em>code complexity analyzer</em></a>
+
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
