--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
             </table>
         </div>
       </div>
+       <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Other Resources
+          </div>
+          <div class="panel-body">
+            <ul>
+              <li>
+              a <a href="http://thrashing.io/tutorial/551891bccfead697722b05ad">tutorial</a> by @jxieeducation (Jason Xie)
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <script src="website/static/bower/jquery/jquery.min.js"></script>
       <script src="website/static/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 
