--- a/codecloud.html
+++ b/codecloud.html
@@ -188,8 +188,8 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["variable", 64],
                                         ["OperandType", 63],
                                         ["uint8_t", 61],
-                                        ["BytecodeLabel", 59],
                                         ["size_t", 59],
+                                        ["BytecodeLabel", 59],
                                         ["UNIMPLEMENTED", 57],
                                         ["execution_result", 56],
                                         ["isolate_", 56],
@@ -224,9 +224,9 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["isolate", 31],
                                         ["os", 31],
                                         ["generator", 30],
-                                        ["VariableLocation", 30],
                                         ["false", 30],
                                         ["LanguageMode", 30],
+                                        ["VariableLocation", 30],
                                         ["SetResultInAccumulator", 29],
                                         ["Property", 29],
                                         ["CodeFactory", 29],
@@ -264,8 +264,8 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["LoadRegister", 21],
                                         ["op", 21],
                                         ["temporary_register_scope", 21],
-                                        ["Variable", 21],
                                         ["LoadLiteral", 21],
+                                        ["Variable", 21],
                                         ["size", 20],
                                         ["NextConsecutiveRegister", 20],
                                         ["inner_temporary_register_scope", 20],
@@ -300,14 +300,14 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["execution_context", 16],
                                         ["ObjectLiteral", 16],
                                         ["typeof_mode", 16],
-                                        ["Isolate", 15],
                                         ["HeapConstant", 15],
                                         ["BreakableControlFlowBuilder", 15],
                                         ["LoadAccumulatorWithRegister", 15],
-                                        ["VisitForRegisterValue", 15],
                                         ["builder_", 15],
+                                        ["VisitForRegisterValue", 15],
                                         ["internal", 15],
                                         ["Jump", 15],
+                                        ["Isolate", 15],
                                         ["v8", 15],
                                         ["ControlScope", 15],
                                         ["context_reg", 14],
@@ -326,10 +326,10 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["closure", 13],
                                         ["BinaryOperation", 13],
                                         ["kNone", 13],
-                                        ["FunctionId", 13],
                                         ["kOperandCount", 13],
                                         ["left", 13],
                                         ["statement", 13],
+                                        ["FunctionId", 13],
                                         ["GetConstantPoolEntry", 13],
                                         ["parameter_count", 13],
                                         ["count", 13],
@@ -345,6 +345,7 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["raw_slot", 12],
                                         ["smi_slot", 12],
                                         ["end_label", 12],
+                                        ["operand", 12],
                                         ["Scope", 12],
                                         ["Smi", 12],
                                         ["destination", 12],
@@ -354,15 +355,14 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["undefined_value", 12],
                                         ["body_label", 12],
                                         ["operands", 12],
-                                        ["operand", 12],
                                         ["DCHECK_GE", 11],
                                         ["operand_2", 11],
                                         ["old_value", 11],
                                         ["LoadContextSlot", 11],
                                         ["literal_in_accumulator", 11],
                                         ["temporary_register_count_", 11],
-                                        ["delta", 11],
                                         ["GetOperandType", 11],
+                                        ["delta", 11],
                                         ["NOT_INSIDE_TYPEOF", 11],
                                         ["var", 11],
                                         ["function_closure", 10],
@@ -389,31 +389,31 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["parameter_index", 10],
                                         ["allocated_", 9],
                                         ["kOffset0", 9],
-                                        ["operand1", 9],
                                         ["execution_result_", 9],
                                         ["UnaryOperation", 9],
                                         ["FromInt", 9],
-                                        ["AccumulatorResultScope", 9],
+                                        ["alias_mappings_", 9],
                                         ["context_register_count_", 9],
+                                        ["operand1", 9],
                                         ["right", 9],
                                         ["template", 9],
-                                        ["alias_mappings_", 9],
                                         ["last_bytecode_start_", 9],
                                         ["handler_table", 9],
                                         ["scope_depth_", 9],
                                         ["Zone", 9],
                                         ["AreContiguous", 9],
                                         ["Statement", 9],
+                                        ["AccumulatorResultScope", 9],
                                         ["exit_seen_in_block_", 9],
                                         ["depth", 9],
                                         ["current_bytecode", 9],
                                         ["index_", 9],
                                         ["DISALLOW_COPY_AND_ASSIGN", 9],
                                         ["final", 9],
-                                        ["function", 9],
-                                        ["assign_type", 9],
                                         ["VisitVariableAssignment", 9],
                                         ["constructor", 9],
+                                        ["function", 9],
+                                        ["assign_type", 9],
                                         ["continue_sites_", 8],
                                         ["LoadUndefined", 8],
                                         ["kOffset1", 8],
@@ -454,7 +454,6 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["EmitJumpIfTrue", 7],
                                         ["KEYED_SUPER_PROPERTY", 7],
                                         ["OutputJump", 7],
-                                        ["run_length", 7],
                                         ["execution_control", 7],
                                         ["EffectResultScope", 7],
                                         ["VisitForEffect", 7],
@@ -468,6 +467,7 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["context_index", 7],
                                         ["VARIABLE", 7],
                                         ["EmitJump", 7],
+                                        ["StoreContextSlot", 7],
                                         ["NAMED_PROPERTY", 7],
                                         ["SetBreakTarget", 7],
                                         ["case_sites_", 7],
@@ -476,7 +476,7 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["NAMED_SUPER_PROPERTY", 7],
                                         ["KEYED_PROPERTY", 7],
                                         ["STRONG", 7],
-                                        ["StoreContextSlot", 7],
+                                        ["run_length", 7],
                                         ["scope_info", 7],
                                         ["site", 7],
                                         ["FromByte", 7],
@@ -486,15 +486,15 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["LoadTypeFeedbackVector", 6],
                                         ["VisitDeclarations", 6],
                                         ["second", 6],
-                                        ["kOperandSizes", 6],
+                                        ["CallIC", 6],
                                         ["DoLoadIC", 6],
                                         ["DoStoreGlobal", 6],
                                         ["DCHECK_GT", 6],
                                         ["clauses", 6],
                                         ["allocator_", 6],
                                         ["labels", 6],
+                                        ["kOperandSizes", 6],
                                         ["zone_", 6],
-                                        ["CallIC", 6],
                                         ["it", 6],
                                         ["operand2", 6],
                                         ["StoreKeyedProperty", 6],
@@ -504,50 +504,51 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["bytecodes_", 6],
                                         ["statement_", 6],
                                         ["bound_", 6],
-                                        ["attr", 6],
                                         ["global", 6],
                                         ["descriptor", 6],
                                         ["kByte", 6],
-                                        ["receiver_reg", 6],
                                         ["clause", 6],
                                         ["is_identical_to", 6],
                                         ["protected", 6],
-                                        ["lhs", 6],
                                         ["DoKeyedLoadIC", 6],
                                         ["aliased_locals_and_parameters_", 6],
-                                        ["declarations", 6],
+                                        ["attr", 6],
+                                        ["receiver_reg", 6],
                                         ["LoadTheHole", 6],
                                         ["VariableProxy", 6],
                                         ["GetRawOperand", 6],
                                         ["BytecodeTraits", 6],
                                         ["FromOperand", 6],
+                                        ["lhs", 6],
                                         ["offset_", 6],
                                         ["is_bound", 6],
                                         ["NumberOfOperands", 6],
                                         ["register_index", 6],
                                         ["INLINE", 6],
-                                        ["N", 6],
+                                        ["set_result_identified", 6],
                                         ["DoStoreIC", 6],
                                         ["Command", 6],
                                         ["kInvalidOffset", 6],
+                                        ["declarations", 6],
                                         ["code", 6],
                                         ["MUST_USE_RESULT", 6],
                                         ["DoKeyedStoreIC", 6],
                                         ["body", 6],
-                                        ["outer", 6],
                                         ["SetContinueTarget", 6],
                                         ["Parameter", 6],
                                         ["kOperandOffsets", 6],
                                         ["emit_store", 6],
                                         ["shared_info", 6],
+                                        ["outer", 6],
                                         ["next_consecutive_count_", 6],
-                                        ["set_result_identified", 6],
+                                        ["N", 6],
                                         ["AsPropertyName", 5],
                                         ["run_end", 5],
                                         ["accessor_table", 5],
                                         ["kInterpreterToBoolean", 5],
                                         ["kJumpIfNull", 5],
                                         ["kOffset2", 5],
+                                        ["LOOKUP", 5],
                                         ["location", 5],
                                         ["operand_3", 5],
                                         ["VisitVariableLoadForAccumulatorValue", 5],
@@ -555,7 +556,6 @@ BasePlacement.prototype._spiralOffsets = generateSpiralOffsets();
                                         ["Break", 5],
                                         ["JumpIfFalse", 5],
                                         ["current", 5],
-                                        ["CompareOperation", 5],
 
                                     ]);
                                 }
