Fixed warning threshold inconsistency in HTML output.
As documented, warnings are generated when metrics (e.g. CCN) are
bigger (>) than the threshold. Thus, we should use the same logic
in the HTML output, and use greater (>) instead of gte (>=).

--- a/lizard_ext/template.html
+++ b/lizard_ext/template.html
@@ -67,20 +67,20 @@
   <tr>
 	<td style="background-color:LightSteelBlue">{{ func.name }}</td>
 	<td></td>
-	{% if func.cyclomatic_complexity >= thresholds["cyclomatic_complexity"] %}
+	{% if func.cyclomatic_complexity > thresholds["cyclomatic_complexity"] %}
 	   <td class="greater-value">{{ func.cyclomatic_complexity }}</td>
 	{% else %}
 	   <td class="lesser-value">{{ func.cyclomatic_complexity }}</td>
 	{% endif %}
 
-	{% if func.nloc >= thresholds["length"] %}
+	{% if func.nloc > thresholds["length"] %}
 	   <td class="greater-value">{{ func.nloc }}</td>
 	{% else %}
 	   <td class="lesser-value">{{ func.nloc}}</td>
 	{% endif %}
 
 	{% if thresholds["token_count"] %}
-	   {% if func.token_count >= thresholds["token_count"] %}
+	   {% if func.token_count > thresholds["token_count"] %}
 	      <td class="greater-value">{{ func.token_count }}</td>
 	   {% else %}
 	      <td class="lesser-value">{{ func.token_count }}</td>
@@ -89,7 +89,7 @@
 	   <td class="value">{{ func.token_count }}</td>
 	{% endif %}
 
-	{% if func.parameters|length >= thresholds["parameter_count"] %}
+	{% if func.parameters|length > thresholds["parameter_count"] %}
 	   <td class="greater-value">{{ func.parameters|length }}</td>
 	{% else %}
 	   <td class="lesser-value">{{ func.parameters|length }}</td>
