redirect to main page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset='utf-8' />
+    <meta http-equiv="Refresh" content="0; url=https://github.com/terryyin/lizard" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Lizard : A simple code complexity analyzer without caring about the C/C++ header files or Java imports." />
 
@@ -12,202 +13,6 @@
   </head>
 
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/terryyin/lizard">View on GitHub</a>
-
-          <h1 id="project_title">Lizard</h1>
-          <h2 id="project_tagline">A simple code complexity analyzer without caring about the C/C++ header files or Java imports.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/terryyin/lizard/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/terryyin/lizard/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="lizard" class="anchor" href="#lizard"><span class="octicon octicon-link"></span></a>Lizard</h1>
-
-<p>Was hfcca, A Header Free Cyclomatic Complexity Analyzer.</p>
-
-<p><a href="https://travis-ci.org/terryyin/lizard"><img src="https://travis-ci.org/terryyin/lizard.png?branch=master" alt="Build Status"></a></p>
-
-<p>lizard is a simple code complexity analyzer without caring about the C/C++ 
-header files or Java imports. It can deal with</p>
-
-<ul>
-<li>Java</li>
-<li>C/C++</li>
-<li>Objective C.</li>
-</ul><p>It counts </p>
-
-<ul>
-<li>the nloc (lines of code without comments), </li>
-<li>CCN (cyclomatic complexity number),</li>
-<li>token count of functions.</li>
-<li>parameter count of functions.</li>
-</ul><p>You can set limitation for CCN (-C), the number of parameters (-a). Functions
-that exceed these limitations will generate warnings. The exit code of lizard
-will be none-Zero if there are warnings. </p>
-
-<p>This tool actually calculates how complex the code 'looks' rather than how
-complex the code real 'is'. People will need this tool because it's often very
-hard to get all the included folders and files right when they are complicated.
-But we don't really need that kind of accuracy when come to cyclomatic
-complexity.</p>
-
-<p>It requires python2.6 or above (early versions are not verified).</p>
-
-<h2>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
-
-<p>lizard.py is only a single python file, and everything is in that single script. You can always use it without any installation.</p>
-
-<pre>
-python lizard.py
-</pre>
-
-<p>If you want a proper install:</p>
-
-<pre>
-[sudo] pip install lizard
-</pre>
-
-<p>Or if you've got the source:</p>
-
-<pre>
-[sudo] python setup.py install
-</pre>
-
-<h2>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
-
-<pre>
-lizard [options] [PATH or FILE] [PATH] ... 
-</pre>
-
-<p>Run for the code under current folder (recursively):</p>
-
-<pre>
-lizard
-</pre>
-
-<p>Exclude anything in the tests folder:</p>
-
-<pre><code>lizard mySource/ -x"./tests/*"
-</code></pre>
-
-<h3>
-<a name="options" class="anchor" href="#options"><span class="octicon octicon-link"></span></a>Options</h3>
-
-<pre><code>  --version             show program's version number and exit
-  -h, --help            show this help message and exit
-  -v, --verbose         Output in verbose mode (long function name)
-  -C CCN, --CCN=CCN     Threshold for cyclomatic complexity number warning.
-                        The default value is 15. Functions with CCN bigger
-                        than this number will generate warning
-  -a ARGUMENTS, --arguments=ARGUMENTS
-                        Limit for number of parameters
-  -w, --warnings_only   Show warnings only, using clang/gcc's warning format
-                        for printing warnings.
-                        http://clang.llvm.org/docs/UsersManual.html#cmdoption-
-                        fdiagnostics-format
-  -i NUMBER, --ignore_warnings=NUMBER
-                        If the number of warnings is equal or less than the
-                        number, the tool will exit normally, otherwize it will
-                        generate error. Useful in makefile when improving
-                        legacy code.
-  -x EXCLUDE, --exclude=EXCLUDE
-                        Exclude files that match this pattern. * matches
-                        everything, ? matches any single characoter,
-                        "./folder/*" exclude everything in the folder,
-                        recursively. Multiple patterns can be specified. Don't
-                        forget to add "" around the pattern.
-  -X, --xml             Generate XML in cppncss style instead of the normal
-                        tabular output. Useful to generate report in Jenkins
-                        server
-  -P, --no_preprocessor_count
-                        By default, a #if will also increase the complexity.
-                        Adding this option to ignore them
-  -t WORKING_THREADS, --working_threads=WORKING_THREADS
-                        number of working threads. The default value is 1.
-</code></pre>
-
-<h2>
-<a name="example-use" class="anchor" href="#example-use"><span class="octicon octicon-link"></span></a>Example use</h2>
-
-<h3>
-<a name="analyze-a-folder-recursively-lizard-mahjong_gamesrc" class="anchor" href="#analyze-a-folder-recursively-lizard-mahjong_gamesrc"><span class="octicon octicon-link"></span></a>Analyze a folder recursively: lizard mahjong_game/src</h3>
-
-<pre>
-==============================================================
-  NLOC    CCN  token  param    function@line@file
---------------------------------------------------------------
-    10      2     29      2    start_new_player@26@./html_game.c
-   ...
-     6      1      3      0    set_shutdown_flag@449@./httpd.c
-    24      3     61      1    server_main@454@./httpd.c
---------------------------------------------------------------
-2 file analyzed.
-==============================================================
-LOC    Avg.NLOC AvgCCN Avg.ttoken  function_cnt    file
---------------------------------------------------------------
-    191     15      3        51        12     ./html_game.c
-    363     24      4        86        15     ./httpd.c
-
-======================================
-!!!! Warnings (CCN &gt; 15) !!!!
-======================================
-    66     19    247      1    accept_request@64@./httpd.c
-=================================================================================
-Total NLOC  Avg.NLOC  Avg CCN  Avg token  Fun Cnt  Warning cnt   Fun Rt   NLOC Rt  
---------------------------------------------------------------------------------
-       554        20     4.07      71.15       27            1      0.04    0.12
-</pre>
-
-<h3>
-<a name="warnings-only-in-clanggcc-formationlizard--w-mahjong_game" class="anchor" href="#warnings-only-in-clanggcc-formationlizard--w-mahjong_game"><span class="octicon octicon-link"></span></a>Warnings only (in clang/gcc formation):lizard -w mahjong_game</h3>
-
-<pre>
-./src/html_ui/httpd.c:64: warning: accept_request has 19 CCN and 1 params (66 NLOC, 247 tokens)
-./src/mahjong_game/mj_table.c:109: warning: mj_table_update_state has 20 CCN and 1 params (72 NLOC, 255 tokens)
-</pre>
-
-<h2>
-<a name="using-lizard-as-python-module" class="anchor" href="#using-lizard-as-python-module"><span class="octicon octicon-link"></span></a>Using lizard as Python module</h2>
-
-<p>You can also use lizard as a Python module in your code:</p>
-
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="kn">import</span> <span class="nn">lizard</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="n">i</span> <span class="o">=</span> <span class="n">lizard</span><span class="o">.</span><span class="n">analyze_file</span><span class="p">(</span><span class="s">"../cpputest/tests/AllTests.cpp"</span><span class="p">)</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="k">print</span> <span class="n">i</span><span class="o">.</span><span class="n">__dict__</span>
-<span class="p">{</span><span class="s">'nloc'</span><span class="p">:</span> <span class="mi">9</span><span class="p">,</span> <span class="s">'function_list'</span><span class="p">:</span> <span class="p">[</span><span class="o">&lt;</span><span class="n">lizard</span><span class="o">.</span><span class="n">FunctionInfo</span> <span class="nb">object</span> <span class="n">at</span> <span class="mh">0x10bf7af10</span><span class="o">&gt;</span><span class="p">],</span> <span class="s">'filename'</span><span class="p">:</span> <span class="s">'../cpputest/tests/AllTests.cpp'</span><span class="p">}</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="k">print</span> <span class="n">i</span><span class="o">.</span><span class="n">function_list</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">__dict__</span>
-<span class="p">{</span><span class="s">'cyclomatic_complexity'</span><span class="p">:</span> <span class="mi">1</span><span class="p">,</span> <span class="s">'token_count'</span><span class="p">:</span> <span class="mi">22</span><span class="p">,</span> <span class="s">'name'</span><span class="p">:</span> <span class="s">'main'</span><span class="p">,</span> <span class="s">'parameter_count'</span><span class="p">:</span> <span class="mi">2</span><span class="p">,</span> <span class="s">'nloc'</span><span class="p">:</span> <span class="mi">3</span><span class="p">,</span> <span class="s">'long_name'</span><span class="p">:</span> <span class="s">'main( int ac , const char ** av )'</span><span class="p">,</span> <span class="s">'start_line'</span><span class="p">:</span> <span class="mi">30</span><span class="p">}</span>
-</pre></div>
-
-<p>You can also use source code string instead of file. But you need to provide a file name (to identify the language).</p>
-
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="n">i</span> <span class="o">=</span> <span class="n">lizard</span><span class="o">.</span><span class="n">analyze_file</span><span class="o">.</span><span class="n">analyze_source_code</span><span class="p">(</span><span class="s">"AllTests.cpp"</span><span class="p">,</span> <span class="s">"int foo(){}"</span><span class="p">)</span>
-</pre></div>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Lizard maintained by <a href="https://github.com/terryyin">terryyin</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+Redirecting to https://github.com/terryyin/lizard
   </body>
 </html>
